--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@mui/icons-material": "^7.3.7",
+    "@tanstack/react-router-devtools": "^1.157.16",
+    "@tanstack/router-devtools": "^1.157.16",
     "@tanstack/router-plugin": "^1.154.13",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
