--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@tanstack/react-router": "^1.154.13",
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
